# pyro_NMF

./: .buildinfo  .gitignore  A_mean.csv  A_scale.csv  P_mean.csv  P_scale.csv  README.md  anndata.html  api.html  genindex.html  index.html  installation.html  model_specs.md  objects.inv  pyproject.toml  pyro2.yml  pyro3.yml  pytest.ini  run.py  run_ABActx.py  run_ABActx_modelNew.py  run_ABActx_modelNew_MCMC.py  run_ABActx_modelNew_checkScaleDconstraint.py  run_ABActx_modelNew_sparisty.py  run_ABActx_model_NB.py  run_NSFtoy.py  run_NSFtoy_modelNew.py  run_NSFtoy_modelNew_MCMC.py  run_atomic_SVI.py  run_model_NB_SVI.py  run_model_NB_SVI_SS.py  run_model_NB_SVI_SS_updatableFixedPvalues.py  run_model_NB_SVI_multislice.py  run_pyroNSF.py  run_tensorboard.sh  search.html  searchindex.js  summary_changes.md  test-data.xml  tutorial.html  (+1 more)
.doctrees/: anndata.doctree  api.doctree  environment.pickle  index.doctree  installation.doctree  tutorial.doctree  usage.doctree
_sources/: anndata.md.txt
cogaps/: gamma_NB_L2reg.py  gamma_NB_SSupdate.py  gamma_NB_base.py  gamma_NB_batched.py  gplvm.py  guide.py  model.py  model_NB_cleaned.py  model_NB_cleaned_SS.py  model_NB_cleaned_SS_updatableFixedPvalues.py  model_new.py  model_new_checkScaleDconstraint.py  nsf.py  plotting.py  utils.py
docs/: Makefile  anndata.md  api.md  conf.py  index.md  installation.md  legacy.md  tutorial.md  usage.md
models/: gamma_NB_SSfixed.py
scripts/: compare_runs.py  example.py  example_multirun.py  new_run_v2.py  run_SSfixed_SVI.py  run_baseModel_SVI.py  run_baseModel_SVI_newBase.py  (+12 more)
(+111 files in other folders)
